--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--definir cabeçalho com o p-5(padding do Bootstrap) -->
     <nav class="container d-flex justify-content-between align-items-center"></nav>
  
-    
+    <img src="img/logo.png" f
     </head>
 </body>
 </html>
